@@ -17,6 +17,7 @@ Thanks!
 - Add "Get Info" to folder contextual menu.
 - Return key in folders list opens home page.
 - Changed wording of expired articles preference.
+- Single-click folder to rename.
 
 2.1.0.2102
 ----------
